# solidworks2ros

solidworks2ros_try0/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  setup.sh  (+3 more)
solidworks2ros_try19/: frames.gv
solidworks2ros_try19/src/solidworks2ros_try19/: CMakeLists.txt
solidworks2ros_try19/src/solidworks2ros_try19/config/: position_controller_short.yaml
solidworks2ros_try19/src/solidworks2ros_try19/launch/: launch.launch  rviz.launch
solidworks2ros_try19/src/solidworks2ros_try19/meshes_temporary/: link_8.STL
solidworks2ros_try19/src/solidworks2ros_try19/src/: moment_of_inertia.py
solidworks2ros_try19/src/solidworks2ros_try19/urdf/: solidworks2ros_try19.urdf
solidworks2ros_try22/src/solidworks2ros_try22/: CMakeLists.txt  package.xml
solidworks2ros_try22/src/solidworks2ros_try22/config/: position_controller.yaml
solidworks2ros_try22/src/solidworks2ros_try22/launch/: display.launch  gazebo.launch  launch.launch
solidworks2ros_try22/src/solidworks2ros_try22/meshes/: base_link.STL  link_1.STL  link_4.STL
solidworks2ros_try22/src/solidworks2ros_try22/scripts/: calculator.py  joint_position_contoller3_short.py
solidworks2ros_try22/src/solidworks2ros_try22/src/: calculator.cpp
solidworks2ros_try22/src/solidworks2ros_try22/urdf/: expanded_robot.urdf  solidworks2ros_try22.csv  solidworks2ros_try22.urdf  solidworks2ros_try22.xacro
solidworks2ros_try23/src/solidworks2ros_try23/: CMakeLists.txt
solidworks2ros_try23/src/solidworks2ros_try23/launch/: launch.launch  rviz.launch
solidworks2ros_try23/src/solidworks2ros_try23/meshes/: link_8.STL
solidworks2ros_try23/src/solidworks2ros_try23/urdf/: cube_pick_place.urdf  solidworks2ros_try23.urdf
solidworks2ros_try25/: frames.gv
solidworks2ros_try27/: frames.gv
solidworks2ros_try6/: .setup_assistant  frames.gv
(+1195 files in other folders)
